[build-system]
requires = ["setuptools>=75.0", "setuptools-scm>=8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sqlalchemy-mssql-bulkcopy"
dynamic = ["version"]
description = "Bulk copy for SQLAlchemy + mssql-python — 10-50x faster writes via SQL Server's native TDS protocol"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Daniel Caspi" }]
keywords = [
    "sqlalchemy", "mssql", "sql-server", "bulk-copy", "pandas",
    "mssql-python", "bulkcopy", "tds", "etl",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Database",
    "Typing :: Typed",
]
dependencies = ["sqlalchemy>=2.1.0b1"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "pandas>=2.0",
    "mssql-python>=1.4.0",
    "pyodbc>=5.0",
    "ruff>=0.9",
]

[project.urls]
Homepage = "https://github.com/dxdc/sqlalchemy-mssql-bulkcopy"
Issues = "https://github.com/dxdc/sqlalchemy-mssql-bulkcopy/issues"
Changelog = "https://github.com/dxdc/sqlalchemy-mssql-bulkcopy/releases"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 99
src = ["src", "tests"]
exclude = ["_version.py"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/benchmark_ci.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["sqlalchemy_mssql_bulkcopy"]
branch = true

[tool.coverage.report]
show_missing = true

[tool.setuptools_scm]
version_file = "src/sqlalchemy_mssql_bulkcopy/_version.py"
